--- a/MaterialDesignLibrary/MaterialDesign/src/main/res/values/attributes.xml
+++ b/MaterialDesignLibrary/MaterialDesign/src/main/res/values/attributes.xml
@@ -4,9 +4,9 @@
     <declare-styleable name="CustomAttributes">
 
         <!-- Color of ripple animation -->
-        <attr name="rippleColor" format="color|reference" />
+        <attr name="rippleColorT" format="color|reference" />
         <!-- Speed of ripple animation -->
-        <attr name="rippleSpeed" format="float" />
+        <attr name="rippleSpeedT" format="float" />
         <!-- indicate if the slider must show number indicator -->
         <attr name="showNumberIndicator" format="boolean" />
         <!-- in progress view indicate max value of progress -->
